resource.tf
resource "aws_instance" "web" {
  ami           = ""
  instance_type = "t2.micro"
  security_groups = [aws_security_group.mysg.name]
  key_name = "Terraform_key"

  tags = {
    Name = "web_ec2"
    Department = "devops"
  }
}

resource "aws_vpc" "mtc_vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "main"
  }
}

resource "aws_subnet" "mtc_public_subnet" {
    vpc_id = aws_vpc.mtc_vpc.id
    cidr_block = "10.1.0.0/24"
    map_public_ip_on_launch = true
    availability_zone = "us_west_2a"

    tags = {
        Name = "dev-public"
    }
  
}

resource "aws_internet_gateway" "mtc-internet-gateway" {
    vpc_id = aws_vpc.mtc_vpc.id

    tags = {
      Name = "dev-igw"
    }
  
}

resource "aws_route_table" "mtc_public_tr" {
    vpc_id = aws_vpc.mtc_vpc.id

    tags = {
      Name = "dev_public_rt"
    }
  
}

resource "aws_route" "default_route" {
    route_table_id = aws_route_table.mtc_public_tr.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.mtc-internet-gateway.id
  
}

resource "aws_route_table_association" "mtc_public_assoc" {
    subnet_id = aws_subnet.mtc_public_subnet.id
    route_table_id = aws_route_table.mtc_public_tr.id
  
}

resource "aws_security_group" "mtc_sg" {
    Name = "dev_sg"
    description = "dev security groups"
    vpc_id = aws_vpc.mtc_vpc.id

    ingress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]

    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]

    }
  
}

resource "aws_key_pair" "etc_auth" {
  key_name = "mtckey"
  public_key = file("~/.ssh/mtckey.pub")
  
}

resource "aws_instance" "dev_node" {
  instance_type = "t2.micro"
  ami = data.aws_ami.server_ami.id
  key_name = aws_key_pair.etc_auth.id
  vpc_security_group_ids = [aws_security_group.mtc_sg.id]
  subnet_id = aws_subnet.mtc_public_subnet.id
  user_data = file("userdata.tpl")

  root_block_device {
    volume_size = 10
  }

  tags = {
    name = "dev_node"
  }
}
